fix for #16798 to Ruby 2.6 introduced C99 syntax [Backport #18387]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_2_6@67955 b2dd03c8-39d4-4d8f-98ff-823fe69b080e